// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accessibility should expose correct accessibility name when hide-label prop is set 1`] = `
{
  "name": "Some label",
  "role": "button",
}
`;

exports[`accessibility should expose correct accessibility tree if accessibility properties are set: aria-pressed attribute 1`] = `
{
  "name": "Some label",
  "pressed": true,
  "role": "button",
}
`;

exports[`accessibility should expose correct accessibility tree if accessibility properties are set: initial aria attributes 1`] = `
{
  "expanded": true,
  "haspopup": "menu",
  "name": "Some more detailed label",
  "role": "button",
}
`;

exports[`accessibility should expose correct initial accessibility tree properties 1`] = `
{
  "name": "Some label",
  "role": "button",
}
`;
